--- a/app/scss/fonts/_fonts.scss
+++ b/app/scss/fonts/_fonts.scss
@@ -1,7 +1,7 @@
-@font-face {
-    src: url(#{$font-sfcompact-path}FontsFree-Net-SFCompactDisplay-Regular.ttf);
-    font-family: sfcompact;
-        }
+// @font-face {
+//     src: url(#{$font-sfcompact-path}FontsFree-Net-SFCompactDisplay-Regular.ttf);
+//     font-family: sfcompact;
+//         }
 
 // @font-face {
 //         src: url(./../SF-Compact.dmg);
