--- a/app/scss/helpers/_base.scss
+++ b/app/scss/helpers/_base.scss
@@ -16,3 +16,11 @@ body{
   margin:0;
 }
 
+.btn{
+  padding:1rem;
+  color:black;
+  background-color: white;
+  font-family: lato;
+  font-weight: bold;
+}
+
