--- a/app/scss/helpers/_variable.scss
+++ b/app/scss/helpers/_variable.scss
@@ -26,5 +26,5 @@ $clr-shadow-green:rgb(29 29 29 / 10%);
 
 $img-path:"./../images/";
 $font-sfcompact-path:"./../";
-$font-sf-compact:sfcompact;
 $font-lato:"Lato";
+// $font-sf-compact:sfcompact;
